# serde-sgx

serde/: Cargo.toml
serde_test/: Cargo.toml
sgx/serde-sgx-test/app/: Cargo.toml
sgx/serde-sgx-test/enclave/: Cargo.toml
test_suite/: Cargo.toml
test_suite/no_std/: Cargo.toml
