[package]
name = "app"
version = "1.0.0"
authors = ["Baidu"]
build = "build.rs"

[dependencies]
sgx_types = { version = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git" }
sgx_urts = {version = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git" }
dirs = "1.0.2"
